Moved registration and fixed endpoint syntax
